--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+04-17-12
+Some modifications to cmdline_reader and download module so that they can be run
+as functions too. added more flexible twobit_reader which can write to files too
+
 03-01-12
 Fixed super() syntax to remove warning
 
